--- a/styles.css
+++ b/styles.css
@@ -12,27 +12,33 @@ body {
 }
 
 @keyframes gradient {
-	0% {
+	0%, 100% {
 		background-position: 0% 50%;
 	}
 	50% {
 		background-position: 100% 50%;
-	}
-	100% {
-		background-position: 0% 50%;
 	}
 }
 
 header, footer { 
     padding: 10px;
     margin: 10px 0;
-    border-radius: 10px;
     background-color: rgb(211,211,211, 0.25);
 }
 
-footer {
+header, footer, .product, #text-side > button {
+    border-radius: 10px;
+}
+
+footer, nav > ul, .slides-container, .slide-container, .product, #product-page, #text-side {
     display: flex;
+}
+
+footer, .slides-container, .slide-container, .product, #product-page {
     align-items: center;
+}
+
+footer, nav > ul, .product, #product-page {
     justify-content: space-around;
 }
 
@@ -40,16 +46,17 @@ nav > ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    display: flex;
-    justify-content: space-around;
 }
 
 nav > ul > li > a {
     text-decoration: none;
+}
+
+nav > ul > li > a, #text-side > button {
     color: black;
 }
 
-nav > ul > li:hover, .prev, .next, .product:hover {
+nav > ul > li:hover, .prev, .next, .product:hover, #text-side > button:hover {
     cursor: pointer;
 }
 
@@ -57,14 +64,7 @@ nav > ul > li:hover, .prev, .next, .product:hover {
     overflow: hidden;
 }
 
-.slides-container {
-    display: flex;
-    align-items: center;
-}
-
 .slide-container {
-    display: flex;
-    align-items: center;
     justify-content: center;
 }
 
@@ -85,18 +85,20 @@ nav > ul > li:hover, .prev, .next, .product:hover {
     grid-template-rows: repeat(auto-fit, 1fr);
     grid-template-columns: repeat(3, 1fr);
     gap: 15px;
-    width: 100%;
+}
+
+.products, #product-side > img {
+    width: 100%; 
 }
 
 .product {
     border: 2px solid black;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-    border-radius: 10px;
     font-size: 30px;
     font-weight: 700;
+}
+
+.product, #text-side {
+    flex-direction: column;
 }
 
 .product:hover {
@@ -110,37 +112,22 @@ nav > ul > li:hover, .prev, .next, .product:hover {
     height: 50%;
 }
 
-#product-page {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-
 #product-side, #text-side {
     width: 45%;
 }
 
-#product-side > img {
-    width: 100%;
-}
-
 #text-side {
-    display: flex;
-    flex-direction: column;
     justify-content: space-evenly;
     align-items: first baseline;
 }
 
 #text-side > button {
     margin: 25px 25px 25px 0;
-    color: black;
     background: linear-gradient(to left, #0099FF, #00D2FF, #4BFCE1);
     border: none;
-    border-radius: 10px;
     padding: 10px 20px 10px 20px;
 }
 
 #text-side > button:hover {
-    cursor: pointer;
     background: linear-gradient(to right, #0099FF, #00D2FF, #4BFCE1);
 }
